File names are no longer stored in interface files. + This should make .agdai files relocatable. + It is not obvious how best to combine line pragmas with relocatable   interface files and go-to-definition functionality, so line pragmas   are no longer supported (for now, anyway). + The --include-path flag can no longer be used as a pragma. (All   modules should be checked using the same include path.) + This patch also fixes a minor bug: MAlonzo could be tricked into   checking the time stamp of the wrong interface file.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -92,6 +92,7 @@ library
                    Agda.Compiler.MAlonzo.Primitives
                    Agda.Interaction.CommandLine.CommandLine
                    Agda.Interaction.Exceptions
+                   Agda.Interaction.FindFile
                    Agda.Interaction.Highlighting.Emacs
                    Agda.Interaction.Highlighting.Generate
                    Agda.Interaction.Highlighting.HTML
