--- a/Agda.cabal
+++ b/Agda.cabal
@@ -242,8 +242,7 @@ library
                    -fwarn-duplicate-exports -fwarn-hi-shadowing
                    -fwarn-incomplete-patterns -fwarn-missing-fields
                    -fwarn-missing-methods -fwarn-overlapping-patterns
-  if impl(ghc >= 6.10)
-    ghc-options:   -fwarn-warnings-deprecations -fwarn-deprecated-flags
+                   -fwarn-warnings-deprecations -fwarn-deprecated-flags
                    -fwarn-dodgy-foreign-imports
 
 executable agda-mode
