Fixed a bug in MAlonzo. + Compiling a module which had already been type checked could lead to   panic. + This bug was introduced in the patch "Type-checking is no longer   done when an up-to-date interface exists.". + Note that after the main module has been type checked its signature   is now removed from stSignature and merged with stImports (just as   if the module had been loaded from an interface file).

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -114,8 +114,13 @@ highlighting : syntax/highlighting/Test*agda
 	@$(echo) "ok"
 
 compiler : MAlonzo/main.agda
-	@$(echo) "Testing $<... "
-	@$(echo) :q | $(run_agda) --compile --malonzo-dir=MAlonzo -iMAlonzo $<
+	@$(echo) "Testing the compiler"
+	@$(agda) --ignore-interfaces --compile --malonzo-dir=MAlonzo -iMAlonzo $<
+	@./MAlonzo/main
+        # Compilation works also if the code has already been type
+        # checked.
+	@rm -rf MAlonzo/MAlonzo
+	@$(agda) --compile --malonzo-dir=MAlonzo -iMAlonzo $<
 	@./MAlonzo/main
 	@$(echo) "ok"
 
