--- a/Agda.cabal
+++ b/Agda.cabal
@@ -237,6 +237,13 @@ library
                    Agda.Utils.Unicode
                    Agda.Utils.Warshall
                    Agda.Version
+                   Agda.Auto.Auto
+                   Agda.Auto.Convert
+                   Agda.Auto.Typecheck
+                   Agda.Auto.NarrowingSearch
+                   Agda.Auto.Print
+                   Agda.Auto.Syntax
+                   Agda.Auto.SearchControl
   other-modules:   Paths_Agda
   ghc-options:     -auto-all -w -Werror -fwarn-dodgy-imports
                    -fwarn-duplicate-exports -fwarn-hi-shadowing
