--- a/Agda.cabal
+++ b/Agda.cabal
@@ -178,6 +178,7 @@ library
                    Agda.TypeChecking.Monad.Statistics
                    Agda.TypeChecking.Monad.Trace
                    Agda.TypeChecking.Monad
+                   Agda.TypeChecking.Nat
                    Agda.TypeChecking.Patterns.Match
                    Agda.TypeChecking.Polarity
                    Agda.TypeChecking.Positivity
