Working with QuickCheck-2.1.0.2.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -50,7 +50,7 @@ library
   hs-source-dirs:  src/full
   build-depends:   base >= 4.1 && < 4.2,
                    mtl >= 1.1 && < 2,
-                   QuickCheck == 2.1.0.1,
+                   QuickCheck >= 2.1.0.2 && < 2.2,
                    haskell98 >= 1.0.1 && < 2,
                    haskell-src >= 1.0.1.1 && < 2,
                    containers >= 0.1.0 && < 1,
