--- a/Agda.cabal
+++ b/Agda.cabal
@@ -245,12 +245,21 @@ library
                    Agda.Auto.Syntax
                    Agda.Auto.SearchControl
   other-modules:   Paths_Agda
-  ghc-options:     -auto-all -w -Werror -fwarn-dodgy-imports
+  if impl(ghc < 6.12)
+    ghc-options:   -auto-all -w -Werror -fwarn-dodgy-imports
                    -fwarn-duplicate-exports -fwarn-hi-shadowing
                    -fwarn-incomplete-patterns -fwarn-missing-fields
                    -fwarn-missing-methods -fwarn-overlapping-patterns
                    -fwarn-warnings-deprecations -fwarn-deprecated-flags
                    -fwarn-dodgy-foreign-imports
+  if impl(ghc >= 6.12)
+    ghc-options:   -auto-all -w -Werror -fwarn-dodgy-imports
+                   -fwarn-duplicate-exports -fwarn-hi-shadowing
+                   -fwarn-incomplete-patterns -fwarn-missing-fields
+                   -fwarn-missing-methods -fwarn-overlapping-patterns
+                   -fwarn-warnings-deprecations -fwarn-deprecated-flags
+                   -fwarn-dodgy-foreign-imports
+                   -fwarn-wrong-do-bind -fwarn-dodgy-exports
 
 executable agda-mode
   hs-source-dirs:  src/agda-mode
