--- a/Agda.cabal
+++ b/Agda.cabal
@@ -74,9 +74,8 @@ library
                    process >= 1.0.1.0 && < 2,
                    haskeline >= 0.3 && < 0.7,
                    xhtml >= 3000.2 && < 3000.3,
-                   syb >= 0.1 && < 0.2
-  if impl(ghc >= 6.10)
-    build-depends: ghc-prim >= 0.1 && < 1
+                   syb >= 0.1 && < 0.2,
+                   ghc-prim >= 0.1 && < 1
   build-tools:     happy >= 1.15 && < 2,
                    alex >= 2.0.1 && < 3
   exposed-modules: Agda.Main
