--- a/Agda.cabal
+++ b/Agda.cabal
@@ -55,10 +55,10 @@ flag use-locale
 library
   hs-source-dirs:  src/full
   if flag(use-locale)
-    build-depends: base >= 4.2 && < 4.3
+    build-depends: base == 4.2.*
   else
-    build-depends: base >= 4.1 && < 4.2,
-                   utf8-string >= 0.3 && < 0.4
+    build-depends: base == 4.1.*,
+                   utf8-string == 0.3.*
   build-depends:   mtl >= 1.1 && < 2,
                    QuickCheck >= 2.1.0.2 && < 2.2,
                    haskell-src >= 1.0.1.1 && < 2,
@@ -73,8 +73,8 @@ library
                    filepath >= 1.1 && < 2,
                    process >= 1.0.1.0 && < 2,
                    haskeline >= 0.3 && < 0.7,
-                   xhtml >= 3000.2 && < 3000.3,
-                   syb >= 0.1 && < 0.2
+                   xhtml == 3000.2.*,
+                   syb == 0.1.*
   build-tools:     happy >= 1.15 && < 2,
                    alex >= 2.0.1 && < 3
   exposed-modules: Agda.Main
@@ -274,9 +274,9 @@ executable agda-mode
   main-is:         Main.hs
   other-modules:   Paths_Agda
   if flag(use-locale)
-    build-depends: base >= 4.2 && < 4.3
+    build-depends: base == 4.2.*
   else
-    build-depends: base >= 4.1 && < 4.2,
-                   utf8-string >= 0.3 && < 0.4
+    build-depends: base == 4.1.*,
+                   utf8-string == 0.3.*
   build-depends:   filepath >= 1.1 && < 2,
                    process >= 1.0.1.0 && < 2
