--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -1,5 +1,5 @@
 name:            Agda-executable
-version:         2.2.5
+version:         2.2.6
 cabal-version:   >= 1.6 && < 2
 build-type:      Simple
 license:         OtherLicense
@@ -20,9 +20,14 @@ source-repository head
   type:     darcs
   location: http://code.haskell.org/Agda/
 
+source-repository this
+  type:     darcs
+  location: http://code.haskell.org/Agda/
+  tag:      2.2.6
+
 executable agda
   main-is:       Main.hs
-  build-depends: Agda == 2.2.5,
+  build-depends: Agda == 2.2.6,
                  -- Nothing is used from the following package, except
                  -- for the prelude.
                  base >= 3 && < 6
