--- a/Agda.cabal
+++ b/Agda.cabal
@@ -255,21 +255,21 @@ library
                     Agda.Auto.Syntax
                     Agda.Auto.SearchControl
   other-modules:    Paths_Agda
-  if impl(ghc < 6.12)
-    ghc-options:    -w -Werror -fwarn-dodgy-imports
-                    -fwarn-duplicate-exports -fwarn-hi-shadowing
-                    -fwarn-incomplete-patterns -fwarn-missing-fields
-                    -fwarn-missing-methods -fwarn-overlapping-patterns
-                    -fwarn-warnings-deprecations -fwarn-deprecated-flags
+  if true
+    ghc-options:    -w -Werror
+                    -fwarn-deprecated-flags
                     -fwarn-dodgy-foreign-imports
+                    -fwarn-dodgy-imports
+                    -fwarn-duplicate-exports
+                    -fwarn-hi-shadowing
+                    -fwarn-incomplete-patterns
+                    -fwarn-missing-fields
+                    -fwarn-missing-methods
+                    -fwarn-overlapping-patterns
+                    -fwarn-warnings-deprecations
   if impl(ghc >= 6.12)
-    ghc-options:    -w -Werror -fwarn-dodgy-imports
-                    -fwarn-duplicate-exports -fwarn-hi-shadowing
-                    -fwarn-incomplete-patterns -fwarn-missing-fields
-                    -fwarn-missing-methods -fwarn-overlapping-patterns
-                    -fwarn-warnings-deprecations -fwarn-deprecated-flags
-                    -fwarn-dodgy-foreign-imports
-                    -fwarn-wrong-do-bind -fwarn-dodgy-exports
+    ghc-options:    -fwarn-dodgy-exports
+                    -fwarn-wrong-do-bind
   ghc-prof-options: -auto-all
 
 executable agda-mode
