sparse-call-matrices Changed the representation of call matrices from the naive to a sparse one. Drastically improves performance for functions with many arguments (like with-generated ones, which could have 30+ arguments).

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -148,6 +148,7 @@ library
                     Agda.Termination.CallGraph
                     Agda.Termination.Lexicographic
                     Agda.Termination.Matrix
+                    Agda.Termination.SparseMatrix
                     Agda.Termination.Semiring
                     Agda.Termination.TermCheck
                     Agda.Termination.Termination
