--- a/.darcsignore
+++ b/.darcsignore
@@ -59,3 +59,4 @@ test/fail/MAlonzo$
 test/compiler/(Main|MAlonzo)$
 ^src/agda-pkg/dist$
 src/prototyping/terms/(dist|term)$
+^examples/relocatable/copies$
