test framework for interactions   - 'make interaction' runs the interaction tests (also part of 'make test')   - Each test consists of an agda file SomeTest.agda and a interaction     script SomeTest.in. The interaction script contains interactions (as     commands to ghci) that should be performed on the Agda file.   - A simple example:       top_command    (cmd_goals currentFile)       goal_command 0 (cmd_goal_type_context Normalised) ""       goal_command 0 cmd_give "s z"       goal_command 0 cmd_give "Nothing"     The Agda file is loaded automatically before running the test script     and the variable currentFile is bound to the current file name (needed     by cmd_goals, for instance).   - Two new functions have been added to Agda.Interaction.GhciTop for     convenience:       top_command  :: Interaction -> IO ()       goal_command :: InteractionId -> GoalCommand -> String -> IO ()   - The default scope for the script is     Agda.Interaction.GhciTop and Agda.Interaction.BasicOps, but more modules     can be added with ':mod +Agda.Some.Other.Module'.   - The ghci output from each test is recorded in SomeTest.out and compared     against for each run of the test.

--- a/.darcsignore
+++ b/.darcsignore
@@ -10,7 +10,9 @@
 ^doc/haddock/.*\.(gif|html|css|js|haddock)
 ^tmp$
 ^doc/pfe/fake/Syntax/Parser/(Parser|Lexer)\.hs$
-\.(log|ps|aux|bbl|nav|bak|snm|toc|out)$
+\.(log|ps|aux|bbl|nav|bak|snm|toc)$
+^doc/.*\.out$
+\.happy.out$
 \.dvi$
 \.pdf$
 ~$
