--- a/test/interaction/Simple.in
+++ b/test/interaction/Simple.in
@@ -1,4 +1,6 @@
 top_command    (cmd_goals currentFile)
 goal_command 0 (cmd_goal_type_context Normalised) ""
-goal_command 0 cmd_give "s z"
-goal_command 0 cmd_give "Nothing"
+goal_command 0 cmd_refine "Just"
+goal_command 2 cmd_give "n"
+goal_command 1 cmd_give "s z"
+goal_command 1 cmd_give "Nothing"
