Agda seems to work just as well with GHC 6.12.2 as with 6.12.1.

--- a/src/agda-pkg/agda-pkg.cabal
+++ b/src/agda-pkg/agda-pkg.cabal
@@ -11,7 +11,7 @@ homepage:            http://wiki.portal.chalmers.se/agda/
 bug-reports:         http://code.google.com/p/agda/issues/list
 build-type:          Simple
 cabal-version:       >= 1.8
-tested-with:         GHC == 6.12.1
+tested-with:         GHC >= 6.12.1 && <= 6.12.2
 
 source-repository head
   type:     darcs
