--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -14,7 +14,7 @@ description:
   This package provides a command-line program for type-checking and
   compiling Agda programs. The program can also generate hyperlinked,
   highlighted HTML files from Agda sources.
-tested-with:     GHC == 6.10.4 && == 6.12.1
+tested-with:     GHC >= 6.12.1 && <= 6.12.2
 
 source-repository head
   type:     darcs
