The interaction test suite now tests all the main commands. + The tests could be made more exhaustive, though.

--- a/test/interaction/Makefile
+++ b/test/interaction/Makefile
@@ -12,7 +12,8 @@ Tests=$(patsubst %.agda,%.cmp,$(AgdaFiles))
 default : $(Tests)
 
 run_test=( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps'; \
-					 echo 'let currentFile = "$*.agda"' ) \
+					 echo 'let currentFile = "$*.agda"'; \
+					 echo "let top_command = top_command' currentFile" ) \
 				 | cat - $*.in | ghci -v0 | sed -e 's"$(pwd)""g'
 
 %.test : %.in %.agda
