--- a/Agda.cabal
+++ b/Agda.cabal
@@ -232,6 +232,7 @@ library
                     Agda.TypeChecking.Telescope
                     Agda.TypeChecking.Test.Generators
                     Agda.TypeChecking.Tests
+                    Agda.TypeChecking.UniversePolymorphism
                     Agda.TypeChecking.With
                     Agda.Utils.Char
                     Agda.Utils.Either
