--- a/.darcsignore
+++ b/.darcsignore
@@ -62,3 +62,5 @@ test/compiler/(Main|MAlonzo)$
 ^src/agda-pkg/dist$
 src/prototyping/terms/(dist|term)$
 ^examples/relocatable/copies$
+^test/succeed/MAlonzo($|/)
+^test/succeed/Issue296
