started on forcing optimization

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -180,6 +180,7 @@ library
                     Agda.TypeChecking.EtaContract
                     Agda.TypeChecking.Errors
                     Agda.TypeChecking.Free
+                    Agda.TypeChecking.Forcing
                     Agda.TypeChecking.Implicit
                     Agda.TypeChecking.Injectivity
                     Agda.TypeChecking.Level
